--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Greece -- History -- Expedition of Cyrus, 401 B.C.'
 - !lcsh 'Cyrus, the Younger, approximately 423 B.C.-401 B.C.'
 - !lcsh 'Iran -- History -- To 640'
+- GITenberg
 title: Κύρου Ανάβασις Τόμος 1
 url: http://www.gutenberg.org/ebooks/39764
